@@ -72,7 +72,7 @@ class ModelProductSerializer(serializers.ModelSerializer):
     
     class Meta:
         model = ModelProduct
-        fields = ( 'name','head_imgs', 'content_imgs', 'buy_limit','per_limit')
+        fields = ( 'id','name','head_imgs', 'content_imgs', 'buy_limit','per_limit')
 
 class ProductSerializer(serializers.HyperlinkedModelSerializer):
     
