@@ -1,0 +1,153 @@
+body{
+  padding-top:90px;
+}
+.top{
+  width: 640px;
+  height: 88px;
+  border-top:1px solid #6d3f1e;
+  border-bottom: 1px solid #6d3f1e;
+  position: fixed;
+  left:50%;
+  margin-left: -320px;
+  top:0;
+  background-color:#fff;
+  z-index: 9999;
+}
+.top .user{
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 88px;
+  height: 88px;
+  background: url(../images/icon-gerenzhongxin.png) no-repeat center center;
+}
+.top .back{
+  display: block;
+  width: 88px;
+  height: 88px;
+  background: url(../images/icon-fanhui2.png) no-repeat 24px center;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.top p{
+  height: 88px;
+  line-height: 88px;
+  text-align: center;
+  font-size: 24px;
+  color: #6a3b19;
+  background: url(../images/icon-shengyu3.png) no-repeat 180px center;
+}  
+.glist{
+  width: 640px;
+  margin: 0 auto;
+  overflow: hidden;
+  padding-bottom: 18px;
+  background-color:#fff; 
+}
+.glist li{
+  float: left;
+  width: 50%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  
+}
+.glist li:nth-child(2n+1){
+  padding: 18px 9px 0 18px;
+}
+.glist li:nth-child(2n){
+  padding: 18px 18px 0 9px;
+}
+.glist li a .mask{
+  background-color: #9B9B9B;
+  opacity: 0.47;
+  position: absolute;
+  left:0;
+  top:0;
+  right: 0;
+  bottom: 0;
+}
+.glist li a .text{
+  background-color: #403B3B;
+  opacity: 0.88;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  line-height: 100px;
+  border-radius: 50%;
+  left:50%;
+  top:50%;
+  margin-left: -50px;
+  margin-top: -50px;
+  text-align: center;
+  color: #fff;
+  font-size:22px;
+}
+
+.glist li a{
+  display: block;
+  border:2px solid #e5e5e5; 
+  position: relative;
+}
+.glist li a img{
+  display: block;
+  width: 100%;
+  height:320px;
+}
+.glist .gname{
+  font-size: 20px;
+  color: #5f5f5e;
+  text-indent: 10px;
+  line-height: 2;
+  overflow:hidden;
+  white-space:nowrap;
+}
+.glist .gprice{
+  height: 40px;
+  line-height: 40px;
+  padding-bottom: 10px;
+}
+.glist .gprice span{
+  font-size:26px;
+  color:#ce2127;
+  padding-left:14px; 
+}
+.glist .gprice s{
+  font-size: 18px;
+  color:#c1c0bf;
+  padding-left:46px;
+}
+
+
+.cart,
+.scroll-top{
+  position: fixed;
+  bottom: 20px;
+  width: 80px;
+  height: 80px;
+  z-index: 999;
+}
+.cart{
+  left:20px;
+  background-image:url(../images/icon-gouwuche.png); 
+}
+.cart .total{
+  display: block;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  width: 26px;
+  height: 26px;
+  line-height: 26px;
+  border-radius: 50%;
+  background-color: #ea4c88;
+  position: absolute;
+  right: 11px;
+  top:14px;
+}
+.scroll-top{
+  right: 20px;
+  background-image:url(../images/icon-fanhuidingbu.png);
+}
