@@ -44,11 +44,8 @@ function Set_posters(suffix){
 	}); 
 }
 
-function Create_item_dom(p_obj){
-	p_obj.saleout_dom = '';
-	if (p_obj.saleout){
-		p_obj.saleout_dom = '<div class="mask"></div><div class="text">抢光了</div>';
-	}
+function Create_item_dom(p_obj,close_model){
+	
 	//创建商品DOM
 	function Item_dom(){
 	/* 
@@ -61,9 +58,35 @@ function Create_item_dom(p_obj){
           <s class="oprice"><em>¥</em> {{ std_sale_price }}</s>
         </p>{{ saleout_dom }}
       </a>
-    </li>	 */
+    </li>
+    */
 	};
-    return hereDoc(Item_dom).template(p_obj);
+	
+	//创建商品款式DOM
+	function Model_dom(){
+	/* 
+	<li>
+      <a href="tongkuan.html?id={{ product_model.id }}">
+        <img src="{{ pic_path }}">
+        <p class="gname">{{ product_model.name }}</p>
+        <p class="gprice">
+          <span class="nprice"><em>¥</em> {{ agent_price }} </span>
+          <s class="oprice"><em>¥</em> {{ std_sale_price }}</s>
+        </p>
+      </a>
+    </li>
+    */
+	};
+	//如果没有close model,并且model_product存在
+	if (!close_model && !(typeof(p_obj.product_model)=='undifined' || p_obj.product_model==null)){
+		return hereDoc(Model_dom).template(p_obj);
+	}
+
+	p_obj.saleout_dom = '';
+	if (p_obj.saleout){
+		p_obj.saleout_dom = '<div class="mask"></div><div class="text">抢光了</div>';
+	}
+	return hereDoc(Item_dom).template(p_obj);
 }
 
 function Set_promotes_product(suffix){
@@ -116,11 +139,35 @@ function Set_category_product(suffix){
 			//设置女装推荐链接及图片
 			$.each(data.results,
 				function(index,p_obj){
-					var item_dom = Create_item_dom(p_obj);
+					var item_dom = Create_item_dom(p_obj,false);
 					$('.glist').append(item_dom);
 				}
 			);
 		}
+	};
+	// 请求推荐数据
+	$.ajax({ 
+		type:'get', 
+		url:promoteUrl, 
+		data:{}, 
+		dataType:'json', 
+		success:promoteCallBack 
+	}); 
+	
+}
+
+function Set_model_product(suffix){
+	//获取同款式商品列表
+	var promoteUrl = GLConfig.baseApiUrl + suffix;
+	
+	var promoteCallBack = function(data){
+		//设置女装推荐链接及图片
+		$.each(data,
+			function(index,p_obj){
+				var item_dom = Create_item_dom(p_obj,true);
+				$('.glist').append(item_dom);
+			}
+		);
 	};
 	// 请求推荐数据
 	$.ajax({ 
