@@ -1,3 +1,5 @@
+########### 2015-7-31 #################
+ALTER TABLE shop_trades_mergetrade ADD INDEX IDX_TYPE (TYPE);
 ########### 2015-7-25 #################
 alter table flashsale_productdetail add mama_rebeta int(11) NOT NULL;
 ########### 2015-7-18 #################
